--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "backend of sahiyog company",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js",
-    "start": "node index.js"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/Sahiyog-Technologies/backend#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
@@ -27,5 +29,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3",
     "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
