--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=9090
-MONGO_URI=mongodb+srv://admin:admin@sahiyog.l9lnn.mongodb.net/sahiyog?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:admin@cluster0.l9lnn.mongodb.net/shiyog?retryWrites=true&w=majority
 JWT_SECRET=SJBVBVDSBW92U8R4BR78B
