--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3",
+    "underscore": "^1.11.0",
     "uuid": "^8.3.0"
   }
 }
